# faithful-upscaler-pic

./: README.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: image_ops.rs  main.rs
ui/: index.html  main.js  styles.css
